# Prompt-Day-Care

./: .gitignore  LMQL_prompt_breeder.py  README.md  demo.py  setup.cfg
data/fitness_test_suites/: squad_reqs_fitness_test_suite.json
data/lmql_specifications/day_care/: breeder.lmql  thinking_styles.json
data/lmql_specifications/day_care_fixed_sys/: breeder.lmql  mutation_prompts.json
data/lmql_specifications/day_care_fixed_sys/answerability/: task_description.json
data/lmql_specifications/day_care_fixed_sys/conciseness/: task_description.json
data/lmql_specifications/day_care_openai/: breeder.lmql
data/lmql_specifications/day_care_openai/answerability/: task_description.json
data/lmql_specifications/day_care_openai/conciseness/: task_description.json
scripts/: run_day_care_sample_CoTonly.sh
src/prompt_day_care/: day_care.py  genomes.py  models.py  prompt_templates.py
src/prompt_day_care/filters/: bert_filter.py
src/prompt_day_care/fitness_scorers/: fbeta_fitness_scorer.py  fitness_scorer.py
src/prompt_day_care/genome_selectors/: binary_tournament_evolve.py
src/prompt_day_care/genomes/: genome.py
src/prompt_day_care/mutators/: direct_mutators.py  eda_lineage.py  eda_mutators.py  eda_random.py  eda_ranked.py  first_order_direct.py  hypermutators.py  lamarckian.py  mutator.py  zero_order_direct.py
src/prompt_day_care/tests/: test_day_care.py
src/prompt_day_care/utils/: config.py  logging.py
src/promt-day-care/fitness_scorers/: fbeta_fitness_scorer.py  fitness_scorer.py
utils/: bert_filterer.py  fitness_scorers.py
(+4 files in other folders)
