[metadata]
name = prompt_day_care
version = 0.0.1
author = Ambrose Robinson, William Thorne
#author_email = 
description = A package for breeding prompts for causal language models
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10

[options.packages.find]
where = src
exclude = 
    **/vscode/**/*